[project]
name = "asttimport"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.188.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "pydantic-xml[lxml]>=2.18.0",
    "python-calamine>=0.6.1",
]

[project.scripts]
asttimporter = "asttimport.main:main"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=75.0"]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
